--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
     <title>Pokedex LAUNCHX</title>
   </head>
   <body>
-      <div class="container-navbar">
-        <nav>
+    <div class="layout-row"></div>
+    <div class="container-navbar">
+      <nav>
         <div class="search-bar">
           <input
             type="text"
             placeholder="Pikachu"
             id="pokeName"
             name="pokeName"
+            onchange="fetchPokemon()"
           />
-          <button  onclick="fetchPokemon()">
+          <button onclick="fetchPokemon()">
             <lord-icon
               src="https://cdn.lordicon.com/msoeawqm.json"
               trigger="hover"
@@ -35,25 +37,82 @@
         </div>
         <h1>Pokédex</h1>
       </nav>
-      </div>
-      <div class="layout-row">
-        <div class="layout-column">
-          <div class="container-info">
-             <h2>Info</h2>
-          </div>
-        </div>
-        <div class="layout-column">
-          <div class="container-info">
-            <h1>Metapod</h1>
-            <img src="" id="pokeImg" width="150px" alt="" />
+    </div>
 
-          </div>
-        </div>
-        <div>
-
+    <h2>Nombre Pokemon</h2>
+    <div class="layout-row container-boxes ">
+      <div class=" margin-body layout-column">
+        <div class="  container-info layout-column">
+          <table>
+            <tr>
+              <th>Info</th>
+            </tr>
+            <tr>
+              <td>Id</td>
+              <td id="infoId"></td>
+            </tr>
+            <tr>
+              <td>Estatura</td>
+              <td id="infoHeight"></td>
+            </tr>
+            <tr>
+              <td>Peso</td>
+              <td id="infoWeight"></td>
+            </tr>
+            <tr>
+              <td>Habilidades</td>
+              <td id="infoAbilities"></td>
+            </tr>
+            <tr>
+              <td>Tipo</td>
+              <td id="infoType"></td>
+            </tr>
+            <tr>
+              <td>Evolución</td>
+              <td id="infoEvo"></td>
+            </tr>
+          </table>
         </div>
       </div>
-      
+      <div class=" margin-body layout-column">
+        <div class="container-info">
+          <img src="" class="width-100" id="pokeImg" alt="Imagen de pokemon" />
+        </div>
+      </div>
+      <div class=" margin-body layout-column">
+        <div class="margin-body container-info">
+          <table>
+            <tr>
+              <th>Estadísticas</th>
+            </tr>
+            <tr>
+              <td>Vida</td>
+              <td id="infoVida"></td>
+            </tr>
+            <tr>
+              <td>Ataque</td>
+              <td id="infoAtaque"></td>
+            </tr>
+            <tr>
+              <td>Defensa</td>
+              <td id="infoDefensa"></td>
+            </tr>
+            <tr>
+              <td>Ataque Especial</td>
+              <td id="infoAtaqueEspecial"></td>
+            </tr>
+            <tr>
+              <td>Defensa Especial</td>
+              <td id="infoDefensaEspecial"></td>
+            </tr>
+            <tr>
+              <td>Velocidad</td>
+              <td id="infoVelocidad"></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
   </body>
   <footer>
     <script src="https://cdn.lordicon.com/lusqsztk.js"></script>
