add: vista de los pokemons y arreglo la navbar

--- a/index.html
+++ b/index.html
@@ -16,20 +16,8 @@
   </head>
   <body>
 
-
-
-
-
-
-
-
-
-
-
-
-    
-     <div class="layout-row"></div>
-    <div class="container-navbar">
+    <div class="layout-row"></div>
+    <div class="container-navbar width-100">
       <nav>
         <div class="search-bar">
           <input
@@ -51,6 +39,22 @@
         <h1>Pokédex</h1>
       </nav>
     </div>
+    <div class="pokemon-container">
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+<!--     
+    
 
     <div class="layout-column title">
       <h2 id="nombrePokemon">Nombre Pokemon</h2>
@@ -128,7 +132,7 @@
           </table>
         </div>
       </div>
-    </div>
+    </div> -->
   </body> 
   <footer>
     <script src="https://cdn.lordicon.com/lusqsztk.js"></script>
