se quito alt de la imagen

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
       <div class="margin-body layout-column">
         <div class="container-img container-info">
-          <img src="" class="width-100 poke-img" id="pokeImg" alt="Imagen de pokemon" />
+          <img src="" class="width-100 poke-img" id="pokeImg"/>
         </div>
       </div>
       <div class="margin-body layout-column">
@@ -126,7 +126,13 @@
               <td id="infoVelocidad"></td>
             </tr>
           </table>
+
         </div>
+      </div>
+      <div>
+        <table>
+          <td></td>
+        </table>
       </div>
     </div>
   </body> 
