se termino la tabla de habilidades

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
     </div>
 
     <div class="layout-column title">
-      <h2 id="nombrePokemon">Nombre Pokemon</h2>
-      <h3 id="infoType"></h3>
+      <h2 class="title" id="nombrePokemon"></h2>
     </div>
     <div class="layout-row">
       <div class="margin-body layout-column">
@@ -129,12 +128,15 @@
 
         </div>
       </div>
-      <div>
-        <table>
-          <td></td>
+    </div>
+      <!--HABILIDADES-->
+      <div class="layout-row width-100">
+        <table >
+          <td class="title-hab">Movimientos</td>
+          <td id="movimientos"></td>
+
         </table>
       </div>
-    </div>
   </body> 
   <footer>
     <script src="https://cdn.lordicon.com/lusqsztk.js"></script>
