add: mas espacion al recuadrio de habilidades

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <!--HABILIDADES-->
       <div class="layout-row width-100">
         <table >
-          <td class="title-hab">Movimientos</td>
+          <td class="title-hab table-habilidades">Movimientos</td>
           <td id="movimientos"></td>
 
         </table>
