--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="styles\main.css" />
     <title>Pokedex LAUNCHX</title>
   </head>
   <body class="page">
